--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <body>
     <div id="root">
         <h1>{{ message }}</h1>
+        <img :src="src" alt="Immagine Dinamica">
     </div>
     <script src="./js/script.js"></script>
 </body>
